# allofus

./: .gitignore  CITATION  LICENSE  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  enhancement.md  question.md
src/allofus/analysis/: task_analysis_template.py
src/allofus/data_management/: task_data_management_template.py
tests/: test_template.py
tests/analysis/: test_model.py  test_predict.py
tests/data_management/: test_stats4schools_smoking.py
